--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_executable("ttest" src/main.cpp)
+cmake_minimum_required(VERSION 3.0)
+add_executable(ttest src/main.cpp)
+target_include_directories(ttest PRIVATE ${CMAKE_SOURCE_DIR}/include)
