--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
 
+install:
+  - wget http://www.cmake.org/files/v3.3/cmake-3.3.0-Linux-i386.tar.gz && tar -xzf cmake-3.3.0-Linux-i386.tar.gz && sudo cp -fR cmake-3.3.0-Linux-i386/* /usr
+
 compiler:
   - gcc
   - clang
