--- a/http2/CMakeLists.txt
+++ b/http2/CMakeLists.txt
@@ -1,7 +1,7 @@
 qore_add_static_library(http2
-    http2.cpp
+    Huffman.cpp
 )
 
 qore_add_test(http2
-    test/test-http2.cpp
+    test/TestHuffman.cpp
 )
